# settings-shim

./: .gitignore  Application  README.md  meson.build
.github/workflows/: ci.yml
data/: com.github.cassidyjames.settings-shim.desktop
debian/: changelog  control  copyright  rules
src/: Application.vala  Application.vala~
